--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,243 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+    font-size: 16px;
+}
+
+/* nav */
+
+.container-nav{
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    padding: 20px 30px;
+    align-items: center;
+    background: #000;
+}
+
+.container-nav__logo {
+    margin-right: 20px;
+    font-size: 1.3rem;
+    padding-right: 10px;
+    border-right: 1px solid #fff;
+}
+
+.container-nav__logo a {
+    color: #fff;
+}
+
+.container-nav__ul ul {
+    width: 100%;
+    max-width: 100%;    
+    display: flex;
+    align-items: center;
+}
+
+.container-nav__ul ul li a {
+    color: #fff;
+    border-right: 1px solid #fff;
+    margin-right: 15px;
+    padding-right: 10px;
+    font-size: 1rem;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+.container-nav__ul ul li a:hover {
+    background: rgba(255,255,255,.3);
+}
+
+.container-nav__ul ul li a.active {
+    background: #fff;
+    color: #000;
+}
+
+@media (max-width: 450px) {
+   html{
+       font-size: 7px;
+   }
+
+   .container-nav{
+       padding: 10px 10px;
+   }
+}
+
+/* create users */
+
+.container-users {
+    margin: auto;
+    margin-top: 1rem;
+}
+
+.container__form-users {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.container__form-users h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.container__form-users form {
+    display: flex;
+    flex-direction: column;
+}
+
+.container__form-users form input {
+    padding: .3rem;
+    font-size: 1rem;
+    text-align: 1rem;
+    margin-bottom: 1rem;
+}
+
+.container__form-users form button {
+    padding: .3rem;
+    font-size: .9rem;
+}
+
+@media (max-width: 1200px){
+    .container__form-users h2 {
+        font-size: 1rem;
+        margin-bottom: .5rem;
+    }
+
+    .container__form-users form input {
+        padding: .1rem;
+        font-size: .6rem;
+        text-align: .6rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 500px){
+    .container__form-users h2 {
+        font-size: .4rem;
+        margin-bottom: .5rem;
+    }
+
+    .container__form-users form input {
+        font-size: .2rem;
+        text-align: .2rem;
+        margin-bottom: 1rem;
+    }
+}
+
+.container__list-users {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+}
+
+.container__list-users ul li {
+    width: 90%;
+    cursor: pointer;
+    margin: auto;
+    border: 1px solid #000;
+    font-size: 1.2rem;
+    padding: .5rem;
+    margin-bottom: 10px;
+}
+
+/* create nota */
+
+.create-note__card {
+    width: 95%;
+    margin: auto;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.create-note__card h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.create-note__card form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.create-note__card form .container-create-note select {
+    padding: .2rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.create-note__card form .container-create-note__form input,
+.create-note__card form .container-create-note__form textarea{
+    padding: .5rem;
+    font-size: 1rem;
+    align-items: 1rem;
+    margin-bottom: 1rem;
+}
+
+.create-note__card form button {
+    padding: .5rem;
+    font-size: 1rem;
+}
+
+
+/* tasks */
+
+.tasks {
+    margin-top: 1rem;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+}
+
+.tasks-card {
+    border: 1px solid #000;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
+    padding: .7rem;
+    
+}
+
+.tasks-card div h2{
+    font-size: 2rem;
+    margin-bottom: .5rem;
+}
+
+.tasks-card .tasks-card-description {                                           
+    border: 1px solid red;
+    font-size: 1.2rem;
+    padding: .7rem;                 
+    margin-bottom: 1rem;                                                                      
+}
+
+.tasks-card .tasks-card-author {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+
+.tasks-buttons button {
+    margin-right: .4rem;
+    padding: .2rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.tasks-buttons a {
+    padding: .2rem;
+    font-size: 1rem;
+    color: blue;
 }
